src/syntax/snapshots/joky__syntax__parser_snapshots__tests__snapshot_nested_blocks.snap
---
source: src/syntax/parser_snapshots.rs
assertion_line: 82
expression: format_ast(source)
---
Program {
    imports: [],
    constants: [],
    traits: [],
    impls: [],
    structs: [],
    classes: [],
    enums: [],
    effects: [],
    intrinsic_types: [],
    functions: [
        Function {
            name: "main",
            foreign: None,
            receiver_mode: None,
            visibility: Private,
            type_parameters: [],
            parameters: [],
            return_type: None,
            effect_names: [],
            where_predicates: [],
            body: Expr {
                id: NodeId(
                    3,
                ),
                kind: Block(
                    [
                        Expr {
                            id: NodeId(
                                2,
                            ),
                            kind: Block(
                                [
                                    Expr {
                                        id: NodeId(
                                            1,
                                        ),
                                        kind: Block(
                                            [
                                                Expr {
                                                    id: NodeId(
                                                        0,
                                                    ),
                                                    kind: Integer(
                                                        42,
                                                    ),
                                                    span: Span {
                                                        start: 16,
                                                        end: 18,
                                                    },
                                                },
                                            ],
                                        ),
                                        span: Span {
                                            start: 14,
                                            end: 20,
                                        },
                                    },
                                ],
                            ),
                            span: Span {
                                start: 12,
                                end: 22,
                            },
                        },
                    ],
                ),
                span: Span {
                    start: 10,
                    end: 24,
                },
            },
            span: Span {
                start: 0,
                end: 24,
            },
        },
    ],
}
